--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,8 @@ jobs:
       - python/install-deps
       - python/save-cache
       - run:
-          name: Run Tests
-          command: ~/.local/bin/pytest
+          command: pytest  test_hello_world
+          name: Test
 
 workflows:
   main:
